# Hourglass

./: CMakeLists.txt  CMakePresets.json  README.md  hourglass.cpp  vcpkg.json
dataloader/: CMakeLists.txt  Label.cpp  Label.hpp  MaskLabel.cpp  MaskLabel.hpp  PixelLabel.cpp  PixelLabel.hpp  augmentation.hpp  dataload.cpp  dataload.hpp  readme.md  training_options.cpp  training_options.hpp  utilities.cpp  utilities.hpp
examples/: data_config.json  data_config2.json
include/: augmentation.hpp  dataload.hpp  hourglass.hpp  prediction.hpp  residual.hpp  saveload.hpp  subpixel.hpp  training.hpp
